Fixed some page labels for SEO and added script to handle game on mobile view not displayin. Added iOS improvements.

--- a/game/blinko.html
+++ b/game/blinko.html
@@ -52,7 +52,7 @@
 	<meta property="og:description"
 		content="A retro collect-to-win game from the creators of Giddy's Universe — by DiscoCar Games. Play Blinko, collect Bouncy Balls, and reveal mystery Collectibles!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com/game/play">
+	<meta property="og:url" content="https://www.ofidcrypt.com/game/blinko">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
@@ -61,7 +61,7 @@
 	<meta name="twitter:description"
 		content="A retro collect-to-win game from the creators of Giddy's Universe — by DiscoCar Games. Play Blinko, collect Bouncy Balls, and reveal mystery Collectibles!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/game/play">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/game/blinko">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -73,7 +73,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
 
 	<!-- Canonical Preferred URL -->
-	<link rel="canonical" href="https://www.ofidcrypt.com/game/play">
+	<link rel="canonical" href="https://www.ofidcrypt.com/game/blinko">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="../assets/css/main.css">
