Updated build and SEO for Giddy's Blink on play-app.html. Added slant to Giddy's logo on index.html.

--- a/game/app-play.html
+++ b/game/app-play.html
@@ -59,14 +59,14 @@
   <meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-ofid-giddys.webp">
   <meta name="twitter:url" content="https://www.ofidcrypt.com/game/app-play">
 
-  <!-- Default ICO file with multiple sizes -->
-  <link rel="icon" type="image/x-icon" href="../favicon.ico">
+  <!-- Default ICO file -->
+  <link rel="icon" type="image/x-icon" href="TemplateData/favicon.ico">
 
-  <!-- Specific PNG sizes for modern browsers -->
-  <link rel="icon" type="image/png" sizes="1280x1280" href="../favicon.png">
+  <!-- PNG favicon -->
+  <link rel="icon" type="image/png" sizes="1280x1280" href="TemplateData/favicon.png">
 
-  <!-- Default Apple-Touch-Icon sizes -->
-  <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
+  <!-- Apple Touch Icon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="TemplateData/apple-touch-icon.png">
 
   <!-- Apple Compatibility -->
   <meta name="apple-mobile-web-app-capable" content="yes">
