Reverter slanted logo to regular on index.html intro header. Changed header on blinko pages to Blinko Logo.

--- a/game/play.html
+++ b/game/play.html
@@ -249,7 +249,7 @@
         <!-- Header Subpage-->
         <header class="header-subpage">
             <a href="../index.html">
-                <img src="../assets/images/ofid-logo-saturn01.png" alt="OFiDCrypt Logo" class="logo">
+                <img src="../assets/images/giddys-blinko-logo-trans.png" alt="Giddy's Blinko Logo" class="logo">
             </a>
         </header>
 
