--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				</a>
 				<span class="plus-sign">∞</span>
 				<a href="/ofidtales.html" class="no-style-link">
-					<img src="/assets/images/giddys-logo-slant-300.png" alt="Phantom Logo & Link to Download">
+					<img src="/assets/images/giddys-logo-border-300.PNG" alt="Phantom Logo & Link to Download">
 				</a>
 			</div>
 			<div>
