Update Giddy's Blink Game build and fixed aspect on PWA and taller screens. Added clickable AD banner.

--- a/game/app-play.html
+++ b/game/app-play.html
@@ -111,7 +111,11 @@
       <div id="unity-fullscreen-button"></div>
       <div id="unity-build-title">Giddy's Blinko</div>
     </div>
-  </div>
+    <!-- Add banner HTML here (easier to manage than CSS ::after) -->
+    <div id="bottom-banner"
+      style="display: none; height: 90px; width: 100%; background: url('https://ofidcrypt.github.io/assets/images/banner-free-producer.PNG') center/contain no-repeat #111; border-top: 2px solid #333; cursor: pointer; z-index: 10;">
+    </div>
+    </div>
 
   <script>
 
@@ -121,6 +125,7 @@
     var progressBarFull = document.querySelector("#unity-progress-bar-full");
     var fullscreenButton = document.querySelector("#unity-fullscreen-button");
     var warningBanner = document.querySelector("#unity-warning");
+    var bottomBanner = document.querySelector("#bottom-banner");
 
     // Shows a temporary message banner/ribbon for a few seconds, or
     // a permanent error message on top of the canvas if type=='error'.
@@ -185,6 +190,9 @@
       container.className = "unity-mobile";
       canvas.className = "unity-mobile";
 
+      // Show the banner on mobile
+      bottomBanner.style.display = 'block';
+
       // To lower canvas resolution on mobile devices to gain some
       // performance, uncomment the following line:
       // config.devicePixelRatio = 1;
@@ -217,6 +225,19 @@
     document.body.appendChild(script);
 
   </script>
+
+  <script>
+  // Make bottom banner clickable
+  const container = document.querySelector('#unity-container');
+  if (container) {
+    container.addEventListener('click', function(e) {
+      // Only trigger if click is in the bottom banner area
+      if (e.clientY > window.innerHeight - 100) {  // Approx bottom 100px
+        window.open('https://freeproducer.ca/', '_blank');  // ← YOUR AFFILIATE LINK HERE
+      }
+    });
+  }
+</script>
 
   <!-- Link to non-critical JavaScript files -->
   <script src="../assets/js/jquery.scrollex.min.js"></script>
