Fixed style of Giddy Blinko Ad banner background, and adjusted Android viewpoert settings to scale game and banner in view.

--- a/ofidtales.html
+++ b/ofidtales.html
@@ -436,7 +436,7 @@
 							</span>
 							<div class="quick-start-content">
 								<h3 class="quick-start-title">Blinko</h3>
-								<p class="align-center">Giddy retro game</p>
+								<p class="align-center">Giddy Retro Game</p>
 							</div>
 							<button class="round-button" onclick="window.location.href='../game/play.html'">
 								Play Now
