Removed ad banner from standar iPhone mobile view on Giddy's Blinko.

--- a/game/app-play.html
+++ b/game/app-play.html
@@ -196,7 +196,7 @@
         canvas.className = "unity-mobile";
 
         // ❌ REMOVE THIS — it forces banner on iPhone
-        // bottomBanner.style.display = 'block';
+        bottomBanner.style.display = 'block';
 
         // To lower canvas resolution on mobile devices to gain some
         // performance, uncomment the following line:
