--- a/game/app-play.html
+++ b/game/app-play.html
@@ -144,268 +144,258 @@
         </a>
       </div>
     </div>
+  </div>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', () => {
 
-        // Only run carousel if banner is visible (Android or PWA)
-        const isAndroid = /Android/i.test(navigator.userAgent);
-        const isPWA =
-          window.matchMedia('(display-mode: standalone)').matches ||
-          window.navigator.standalone === true;
+  <script>
 
-        if (!isAndroid && !isPWA) {
-          return; // iPhone or desktop → no carousel JS needed
-        }
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    var warningBanner = document.querySelector("#unity-warning");
+    var bottomBanner = document.querySelector("#bottom-banner");
 
-        const container = document.querySelector('#bottom-banner .ad-scroll-container');
-        const slides = document.querySelectorAll('#bottom-banner .ad-slide');
-        const totalSlides = slides.length;
+    // Shows a temporary message banner/ribbon for a few seconds, or
+    // a permanent error message on top of the canvas if type=='error'.
+    // If type=='warning', a yellow highlight color is used.
+    // Modify or remove this function to customize the visually presented
+    // way that non-critical warnings and error messages are presented to the
+    // user.
+    function unityShowBanner(msg, type) {
+      function updateBannerVisibility() {
+        warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
+      }
+      var div = document.createElement('div');
+      div.innerHTML = msg;
+      warningBanner.appendChild(div);
+      if (type == 'error') div.style = 'background: red; padding: 10px;';
+      else {
+        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        setTimeout(function () {
+          warningBanner.removeChild(div);
+          updateBannerVisibility();
+        }, 5000);
+      }
+      updateBannerVisibility();
+    }
 
-        if (!container || totalSlides === 0) {
-          console.warn('Carousel: No slides found.');
-          return;
-        }
+    var buildUrl = "Build";
+    var loaderUrl = buildUrl + "/GiddGameWeb.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/GiddGameWeb.data.unityweb",
+      frameworkUrl: buildUrl + "/GiddGameWeb.framework.js.unityweb",
+      codeUrl: buildUrl + "/GiddGameWeb.wasm.unityweb",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "giddy",
+      productVersion: "1.0",
+      showBanner: unityShowBanner,
+    };
 
-        let autoScrollInterval;
-        let currentIndex = 0;
+    // By default, Unity keeps WebGL canvas render target size matched with
+    // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+    // Set this to false if you want to decouple this synchronization from
+    // happening inside the engine, and you would instead like to size up
+    // the canvas DOM size and WebGL render target sizes yourself.
+    // config.matchWebGLToCanvasSize = false;
 
-        // Clone first slide for looping
-        const firstClone = slides[0].cloneNode(true);
-        container.appendChild(firstClone);
+    // If you would like all file writes inside Unity Application.persistentDataPath
+    // directory to automatically persist so that the contents are remembered when
+    // the user revisits the site the next time, uncomment the following line:
+    // config.autoSyncPersistentDataPath = true;
+    // This autosyncing is currently not the default behavior to avoid regressing
+    // existing user projects that might rely on the earlier manual
+    // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
+    // expected to change.
 
-        // Force start at first slide
-        function setInitialPosition() {
-          container.scrollTo({ left: 0, behavior: 'instant' });
-          currentIndex = 0;
-        }
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      // Mobile device style: fill the whole browser client area with the game canvas:
 
-        // Calculate slide width
-        function getBoxWidth() {
-          const slideWidth = slides[0].offsetWidth;
-          const slideMargin = window.innerWidth <= 480 ? 10 : 40;
-          return slideWidth + slideMargin;
-        }
+      var meta = document.createElement('meta');
+      meta.name = 'viewport';
+      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+      document.getElementsByTagName('head')[0].appendChild(meta);
 
-        // Auto-scroll loop
-        function startAutoScroll() {
-          clearInterval(autoScrollInterval);
-          autoScrollInterval = setInterval(() => {
-            currentIndex++;
+      container.className = "unity-mobile";
+      canvas.className = "unity-mobile";
 
-            if (currentIndex >= totalSlides + 1) {
-              container.scrollTo({ left: 0, behavior: 'instant' });
-              currentIndex = 1;
-            }
+      // ❌ REMOVE THIS — it forces banner on iPhone
+      //bottomBanner.style.display = 'block';
 
-            container.scrollTo({
-              left: currentIndex * getBoxWidth(),
-              behavior: 'smooth'
-            });
-          }, 8000);
-        }
+      // To lower canvas resolution on mobile devices to gain some
+      // performance, uncomment the following line:
+      // config.devicePixelRatio = 1;
 
-        // Touch handling (tap vs swipe)
-        let touchStartX = 0;
-        let touchStartY = 0;
-        let touchMoved = false;
+    } else {
+      // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+      canvas.style.width = "960px";
+      canvas.style.height = "600px";
+    }
 
-        container.addEventListener('touchstart', (e) => {
-          touchStartX = e.touches[0].clientX;
-          touchStartY = e.touches[0].clientY;
-          touchMoved = false;
-        }, { passive: true });
+    loadingBar.style.display = "block";
 
-        container.addEventListener('touchmove', (e) => {
-          const dx = Math.abs(e.touches[0].clientX - touchStartX);
-          const dy = Math.abs(e.touches[0].clientY - touchStartY);
-
-          if (dx > 10 && dy < 50) {
-            e.preventDefault();
-            touchMoved = true;
-          }
-          if (dy > 50) {
-            touchMoved = true;
-          }
-        }, { passive: false });
-
-        container.addEventListener('touchend', (e) => {
-          if (!touchMoved) {
-            const target = e.target.closest('a');
-            if (target && target.href) {
-              window.location.href = target.href;
-            }
-          }
-        }, { passive: true });
-
-        // Prevent wheel scroll inside banner
-        container.addEventListener('wheel', (e) => e.preventDefault(), { passive: false });
-
-        // Resize handling
-        let resizeTimeout;
-        window.addEventListener('resize', () => {
-          clearTimeout(resizeTimeout);
-          resizeTimeout = setTimeout(() => {
-            container.scrollTo({
-              left: currentIndex * getBoxWidth(),
-              behavior: 'instant'
-            });
-            startAutoScroll();
-          }, 100);
-        });
-
-        // Init
-        setInitialPosition();
-        startAutoScroll();
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((unityInstance) => {
+        loadingBar.style.display = "none";
+        fullscreenButton.onclick = () => {
+          unityInstance.SetFullscreen(1);
+        };
+      }).catch((message) => {
+        alert(message);
       });
-    </script>
+    };
 
-    <script>
+    document.body.appendChild(script);
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
-      var bottomBanner = document.querySelector("#bottom-banner");
+  </script>
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function () {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
-      }
+  <script>
+    // Detect platform
+    const isAndroid = /Android/i.test(navigator.userAgent);
+    const isPWA =
+      window.matchMedia('(display-mode: standalone)').matches ||
+      window.navigator.standalone === true;
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/GiddGameWeb.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/GiddGameWeb.data.unityweb",
-        frameworkUrl: buildUrl + "/GiddGameWeb.framework.js.unityweb",
-        codeUrl: buildUrl + "/GiddGameWeb.wasm.unityweb",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "giddy",
-        productVersion: "1.0",
-        showBanner: unityShowBanner,
-      };
+    // Add Android-only class for CSS targeting
+    if (isAndroid) {
+      document.body.classList.add('is-android');
+    }
 
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
+    // Show banner only on Android or PWA
+    const bottomBanner = document.getElementById('bottom-banner');
+    if (bottomBanner && (isAndroid || isPWA)) {
+      bottomBanner.style.display = 'block';
+    }
+  </script>
 
-      // If you would like all file writes inside Unity Application.persistentDataPath
-      // directory to automatically persist so that the contents are remembered when
-      // the user revisits the site the next time, uncomment the following line:
-      // config.autoSyncPersistentDataPath = true;
-      // This autosyncing is currently not the default behavior to avoid regressing
-      // existing user projects that might rely on the earlier manual
-      // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
-      // expected to change.
+  <script>
+    // Ad Carousel Script
+    document.addEventListener('DOMContentLoaded', () => {
 
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-
-        container.className = "unity-mobile";
-        canvas.className = "unity-mobile";
-
-        // ❌ REMOVE THIS — it forces banner on iPhone
-        //bottomBanner.style.display = 'block';
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
-      }
-
-      loadingBar.style.display = "block";
-
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
-        }).catch((message) => {
-          alert(message);
-        });
-      };
-
-      document.body.appendChild(script);
-
-    </script>
-
-    <script>
-      // Detect platform
+      // Only run carousel if banner is visible (Android or PWA)
       const isAndroid = /Android/i.test(navigator.userAgent);
       const isPWA =
         window.matchMedia('(display-mode: standalone)').matches ||
         window.navigator.standalone === true;
 
-      // Add Android-only class for CSS targeting
-      if (isAndroid) {
-        document.body.classList.add('is-android');
+      if (!isAndroid && !isPWA) {
+        return; // iPhone or desktop → no carousel JS needed
       }
 
-      // Show banner only on Android or PWA (your original logic)
-      if (bottomBanner && (isAndroid || isPWA)) {
-        bottomBanner.style.display = 'block';
+      const container = document.querySelector('#bottom-banner .ad-scroll-container');
+      const slides = document.querySelectorAll('#bottom-banner .ad-slide');
+      const totalSlides = slides.length;
+
+      if (!container || totalSlides === 0) {
+        console.warn('Carousel: No slides found.');
+        return;
       }
 
-      // Make banner clickable (mouse + touch)
-      if (bottomBanner) {
-        bottomBanner.style.pointerEvents = 'auto';
+      let autoScrollInterval;
+      let currentIndex = 0;
 
-        const openLink = () => window.open('https://freeproducer.ca/', '_blank');
+      // Clone first slide for looping
+      const firstClone = slides[0].cloneNode(true);
+      container.appendChild(firstClone);
 
-        bottomBanner.addEventListener('click', openLink);
-
-        bottomBanner.addEventListener('touchend', (e) => {
-          e.preventDefault(); // Prevent ghost click
-          openLink();
-        });
+      // Force start at first slide
+      function setInitialPosition() {
+        container.scrollTo({ left: 0, behavior: 'instant' });
+        currentIndex = 0;
       }
-    </script>
 
-    <!-- Link to non-critical JavaScript files -->
-    <script src="../assets/js/jquery.scrollex.min.js"></script>
-    <script src="../assets/js/jquery.scrolly.min.js"></script>
-    <script src="../assets/js/util.js"></script>
-    <script src="../assets/js/breakpoints.min.js"></script>
-    <script src="../assets/js/main.js"></script>
+      // Calculate slide width
+      function getBoxWidth() {
+        const slideWidth = slides[0].offsetWidth;
+        const slideMargin = window.innerWidth <= 480 ? 10 : 40;
+        return slideWidth + slideMargin;
+      }
+
+      // Auto-scroll loop
+      function startAutoScroll() {
+        clearInterval(autoScrollInterval);
+        autoScrollInterval = setInterval(() => {
+          currentIndex++;
+
+          if (currentIndex >= totalSlides + 1) {
+            container.scrollTo({ left: 0, behavior: 'instant' });
+            currentIndex = 1;
+          }
+
+          container.scrollTo({
+            left: currentIndex * getBoxWidth(),
+            behavior: 'smooth'
+          });
+        }, 8000);
+      }
+
+      // Touch handling (tap vs swipe)
+      let touchStartX = 0;
+      let touchStartY = 0;
+      let touchMoved = false;
+
+      container.addEventListener('touchstart', (e) => {
+        touchStartX = e.touches[0].clientX;
+        touchStartY = e.touches[0].clientY;
+        touchMoved = false;
+      }, { passive: true });
+
+      container.addEventListener('touchmove', (e) => {
+        const dx = Math.abs(e.touches[0].clientX - touchStartX);
+        const dy = Math.abs(e.touches[0].clientY - touchStartY);
+
+        if (dx > 10 && dy < 50) {
+          e.preventDefault();
+          touchMoved = true;
+        }
+        if (dy > 50) {
+          touchMoved = true;
+        }
+      }, { passive: false });
+
+      container.addEventListener('touchend', (e) => {
+        if (!touchMoved) {
+          const target = e.target.closest('a');
+          if (target && target.href) {
+            window.location.href = target.href;
+          }
+        }
+      }, { passive: true });
+
+      // Prevent wheel scroll inside banner
+      container.addEventListener('wheel', (e) => e.preventDefault(), { passive: false });
+
+      // Resize handling
+      let resizeTimeout;
+      window.addEventListener('resize', () => {
+        clearTimeout(resizeTimeout);
+        resizeTimeout = setTimeout(() => {
+          container.scrollTo({
+            left: currentIndex * getBoxWidth(),
+            behavior: 'instant'
+          });
+          startAutoScroll();
+        }, 100);
+      });
+
+      // Init
+      setInitialPosition();
+      startAutoScroll();
+    });
+  </script>
+
+  <!-- Link to non-critical JavaScript files -->
+  <script src="../assets/js/jquery.scrollex.min.js"></script>
+  <script src="../assets/js/jquery.scrolly.min.js"></script>
+  <script src="../assets/js/util.js"></script>
+  <script src="../assets/js/breakpoints.min.js"></script>
+  <script src="../assets/js/main.js"></script>
 </body>
 
 </html>
